syntax = "proto3";

package main.api.orderpb;

option go_package = "main/api/orderpb";

service Order {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
    rpc GetOrderStatus(GetStatusRequest) returns (GetStatusResponse);
}

message GetStatusRequest {
    int64 order_id = 1;
    int64 user_id = 2;
}

message GetStatusResponse {
    OrderStatus status = 1;
}

message CreateOrderRequest {
    int64 user_id = 1;
    int64 market_id = 2;
    OrderType order_type = 3;
    float price = 4;
    int64 quantity = 5;
}

message CreateOrderResponse {
    int64 order_id = 1;
    OrderStatus status = 2;
}

enum OrderType {
    ORDER_TYPE_UNSPECIFIED = 0;
    ORDER_TYPE_BUY = 1;
    ORDER_TYPE_SELL = 2;
}

enum OrderStatus {
    ORDER_STATUS_UNSPECIFIED = 0;
    ORDER_STATUS_CREATED = 1;   
    ORDER_STATUS_PENDING = 2;
    ORDER_STATUS_COMPLETED = 3;  
    ORDER_STATUS_REJECTED = 4;
}